# DBMSProjBackend

./: Cargo.toml  Dockerfile  backend.yaml  compose.yaml  kustomization.yaml
.github/workflows/: deploy.yml  workflow.yml
.sqlx/: query-054c725f9c689d3039f7431249d5b86c4b7c3b0156cd193a3d637a8a8802df13.json  query-134929b383d487f4ece0b48b99ec29621c41403faf292f5e6f28f7acaf5c57f4.json  query-2a7ca528b1effbd671512bffe6e9380c091ece818c86ec96704e32ddfdac9043.json  query-3bfcd986df082a8ab25ee31418f9f70487b41645332ccb2ad23b9e3f6cf2de54.json  query-41d1f7d5e1d464ee3273865a16ccc8cab34c0e1276dec13ebec1ece57f0be89b.json  query-664b5441a1b7f6bd3cde477a2a6b4967b109823f31353a82a3c70ca2daad15e0.json  query-7273627baf4e405225e04b3d437d837610b1ce676c14d6618cb402cad7a28358.json  query-a0158999e9da272050d620e12ee19f91dbf1c0d5e1828acd8ea9cf4ab668519f.json  query-c55b3715fb04232f30ffcab120ea5ce2e523eaee6d3b77499a81395bf5cded24.json
migrations/: 20240722122940_ingredients.sql  20240722122942_pizza.sql  20240722122946_non_pizza.sql  20240722122950_order.sql  20240722123004_payment.sql  20240722123008_customer.sql  20240722126008_order.sql  20240730110748_order_pizza.sql  20240730110804_order_non_pizza.sql
src/: errors.rs  get_items.rs  login.rs  logout.rs  main.rs  place_order.rs  register.rs  utils.rs
src/utils/: mod.rs  password.rs  session.rs  user.rs
